Fixed line break in SidebarFooter

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -18,6 +18,10 @@
  */
 
 .sidebarFooter {
+	.copyright {
+		@extend .small;
+	}
+
 	ul {
 		list-style-type: none;
 		padding: 0;
